# tennis

./: .dockerignore  .env.example  .gitignore  .gitmodules  CONTRIBUTING.md  Dockerfile  README.md  REFERENCE_COMPARISON.md  alembic.ini  analysis.py  ball.py  bounce_detection.py  bounce_detector.py  compose.override.yaml.example  compose.yaml  court.py  court_detection_net.py  court_reference.py  homography.py  main.py  player.py  postprocess.py  pyproject.toml  tracking_postprocess.py  tracknet.py
alembic/: env.py
app/: __init__.py  main.py
deploy/: .env.example  README.md  compose.yaml
docs/: ANALYSIS_OPTIONS.md  ANALYSIS_PIPELINE.md  ARCHITECTURE.md  DEPLOYMENT.md  PERFORMANCE.md  REPOSITORY_AUDIT.md  RESULT_SCHEMA.md  ball-benchmark-baseline.json  ball-benchmark-constrained.json
models/: README.md
scripts/: benchmark_ball_tracking.py  benchmark_pipeline.py  download_models.py
tennis_analyzer/: __init__.py  checkpoints.py  cli.py  config.py  errors.py  schemas.py  scoring.py  video.py
tests/: conftest.py  test_api.py  test_artifact_render.py  test_ball_performance.py  test_ball_tracking.py  test_benchmark.py  test_checkpoints.py  test_chunks.py  test_config_options.py  test_court_calibration.py  test_court_calibration_ui.py  test_court_event_recalculation.py  test_court_reference.py  test_court_tracking.py  test_event_contact_resolution.py  test_integration_models.py  test_job_state.py  test_migrations.py  test_packaging.py  test_pipeline.py  test_pipeline_stages.py  test_player_lifecycle.py  test_progress.py  test_saved_player_projection.py  test_stage_adapters.py  test_storage.py  (+5 more)
(+39 files in other folders)
